@@ -5,19 +5,19 @@ import com.ua.itclusterjava2024.dto.ServiceInfoDTO;
 import com.ua.itclusterjava2024.dto.UniversityDTO;
 import com.ua.itclusterjava2024.entity.Department;
 import com.ua.itclusterjava2024.entity.University;
-import com.ua.itclusterjava2024.exceptions.NotFoundException;
 import com.ua.itclusterjava2024.service.implementation.ServiceInfoService;
 import com.ua.itclusterjava2024.service.interfaces.DepartmentService;
 import com.ua.itclusterjava2024.wrappers.PageWrapper;
 import com.ua.itclusterjava2024.wrappers.Patcher;
 import jakarta.persistence.EntityManager;
+import jakarta.persistence.EntityNotFoundException;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+
 @CrossOrigin
 @RestController
 @RequestMapping("/department")
@@ -45,7 +45,7 @@ public class DepartmentController {
 
         PageWrapper<DepartmentDTO> pageWrapper = new PageWrapper<>();
         pageWrapper.setContent(departmentsPage);
-        pageWrapper.setService_info(prepareServiceInfo());
+        pageWrapper.setServiceInfo(prepareServiceInfo());
         pageWrapper.setTotalElements(departmentsPage.size());
         return pageWrapper;
     }
@@ -61,7 +61,7 @@ public class DepartmentController {
     public PageWrapper<DepartmentDTO> update(@PathVariable("id") Long id,
                                              @RequestBody DepartmentDTO departmentsDTO) {
         Department existingDepartment = departmentService.readById(id).
-                orElseThrow(() -> new NotFoundException("Department not found with id: " + id));
+                orElseThrow(() -> new EntityNotFoundException("Department not found with id: " + id));
         Department updatedDepartment = convertToEntity(departmentsDTO);
         try {
             patcher.patch(existingDepartment, updatedDepartment);
@@ -75,7 +75,7 @@ public class DepartmentController {
 
     @GetMapping("/{id}")
     public DepartmentDTO findById(@PathVariable Long id) {
-        return convertToDTO(departmentService.readById(id).orElse(null));
+        return convertToDTO(departmentService.readById(id).orElseThrow(() -> new EntityNotFoundException("Department not found with id: " + id)));
     }
 
     @DeleteMapping("/{id}")
@@ -118,7 +118,7 @@ public class DepartmentController {
                         .name(u.getName())
                         .abbr(u.getAbbr())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private ServiceInfoDTO prepareServiceInfo() {
